Actualizando proyecto en titulo y addClass

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <div id="container">
+    <h1>Funciones JQuery</h1>
     <div class="row"> <!--HIDE-->
       <div class="col-9">
         <h2>HIDE</h2>
@@ -213,7 +214,7 @@
         });
         //9.addClass
         $('#bAgreg-clase').on('click', function(){
-          $("#Agreg-clase").css("color", "red");
+          $("#Agreg-clase").addClass("moldear");
         });
         //10.before
         $('#bAntes').on('click', function(){
